--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs.add("-parameters")
+}
+
