--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PWD}
-jpa:
-  hibernate:
-    ddl-auto: update
+
+server:
+  error:
+    include-stacktrace: never
